listo movil first

--- a/index.html
+++ b/index.html
@@ -68,6 +68,29 @@
             </article>
             <hr class="division">
         </section>
+        <section class="skills-container">
+        <article>
+            <h2>Habilidades y herramientas</h2>
+            <h3>Habilidades principales</h3>
+            <p>User Research, Wireframing, Architecture Information, Visual Design, Prototyping, Usability, Design Thinking.</p>
+            <h3>Herramientas principales</h3>
+            <p>Sketch, Invision, Protopie, Proto.io, Adobe Photoshop, Adobe Illustrator, Adobe Premiere, WordPress.</p>
+        </article>
+        </section>
+        <section class="quote-section">
+            <h2>Estoy encantada de responder a su próximo proyecto.</h2>
+            <h3>yessica@gmail.com</h3>
+        </section>
+        <footer class="contact-section">
+            <h2>Yessica</h2>
+            <nav class="contact-nav">
+                <ul>
+                    <li><a href="">Linkedin</a></li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Instagram</a></li>
+                </ul>
+            </nav>
+        </footer>
     </main>
 </body>
 </html>
