--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h3>Landing Page de Pruebas Remotas</h3>
                 <p>Aprende a construir una eficiente y bonita Landing Page que puedes aplicar para todo tipo de proyecto personal.</p>
                 <div class="project-pill">
-                    <a href="">Ver en la web</a>
+                    <a href="#">Ver en la web</a>
                     <h4>Ver prototipo</h4>
                 </div>
             </article>
@@ -51,7 +51,7 @@
                 <h3>Cards de precios</h3>
                 <p>Una sección de precios es importante en todo tipo de plataforma, en este ejercicio podrás practicar creando Cards de precios para Dektop y Mobile, dándoles un estilo visual simple y hermoso. </p>
                 <div class="project-pill">
-                    <a href="">Ver en la web</a>
+                    <a href="#">Ver en la web</a>
                     <h4>Ver prototipo</h4>
                 </div>
             </article>
@@ -62,7 +62,7 @@
                 <h3>Sector</h3>
                 <p>Sector es una aplicación que se encarga en la venta de tablas de skate de la más alta calidad, complementos, ruedas y accesorios.</p>
                 <div class="project-pill">
-                    <a href="">Ver en la web</a>
+                    <a href="#">Ver en la web</a>
                     <h4>Ver prototipo</h4>
                 </div>
             </article>
@@ -85,9 +85,9 @@
             <h2>Yessica</h2>
             <nav class="contact-nav">
                 <ul>
-                    <li><a href="">Linkedin</a></li>
-                    <li><a href="">Twitter</a></li>
-                    <li><a href="">Instagram</a></li>
+                    <li><a href="#">Linkedin</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
                 </ul>
             </nav>
         </footer>
