--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
     <main>
         <section class="hero">
             <img  src="./assets/img-user.png" alt="Jessica picture">
-            <h1>¡Hola! 👋🏼 Soy Yessica, UX/UI Designer</h1>
+            <article class="hero-container">
+                <h1>¡Hola! 👋🏼 Soy Yessica, UX/UI Designer</h1>
             <p>Soy una diseñadora de productos e interacción independiente y centrada en aplicaciones móviles innovadoras, aplicaciones web y tecnología del futuro.</p>
-            <div class="ellipse2"></div>
             <div class="hero-pill">
                 <a href="#">Descargar currículum</a>
             </div>
+            </article>
         </section>
         <section class="proyect-container">
+            <div class="ellipse2"></div>
             <!-- === Project 1 === -->
             <article class="project1">
                 <h2>Proyectos</h2>
