Desktop casi lista

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             </div>
             <div class="menu-navbar">
                 <ul>
-                    <li><a href="#">Proyectos</a></li>
-                    <li><a href="#">Habilidades y herramientas</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#projects">Proyectos</a></li>
+                    <li><a href="#skills">Habilidades y herramientas</a></li>
+                    <li><a href="#contact">Contacto</a></li>
                 </ul>
             </div>
         </nav>        
@@ -35,42 +35,50 @@
         </section>
         <section class="proyect-container">
             <div class="ellipse2"></div>
+            <div id="projects" class="projects-title">
+                <h2>Proyectos</h2>
+            </div>
             <!-- === Project 1 === -->
             <article class="project1">
-                <h2>Proyectos</h2>
                 <img src="./assets/proyect1.png" alt="">
+            <div class="project1-container">
                 <h3>Landing Page de Pruebas Remotas</h3>
                 <p>Aprende a construir una eficiente y bonita Landing Page que puedes aplicar para todo tipo de proyecto personal.</p>
                 <div class="project-pill">
                     <a href="#">Ver en la web</a>
                     <h4>Ver prototipo</h4>
                 </div>
+            </div>
             </article>
             <hr class="division">
             <!-- === Project 2 === -->
             <article class="project1">
                 <img src="./assets/project2.png" alt="">
+            <div class="project2-container">
                 <h3>Cards de precios</h3>
                 <p>Una sección de precios es importante en todo tipo de plataforma, en este ejercicio podrás practicar creando Cards de precios para Dektop y Mobile, dándoles un estilo visual simple y hermoso. </p>
                 <div class="project-pill">
                     <a href="#">Ver en la web</a>
                     <h4>Ver prototipo</h4>
                 </div>
+            </div>
             </article>
             <hr class="division">
             <!-- === Project 3 ===  -->
             <article class="project1">
                 <img src="./assets/proyect3.png" alt="">
+            <div class="project3-container">
                 <h3>Sector</h3>
                 <p>Sector es una aplicación que se encarga en la venta de tablas de skate de la más alta calidad, complementos, ruedas y accesorios.</p>
                 <div class="project-pill">
                     <a href="#">Ver en la web</a>
                     <h4>Ver prototipo</h4>
                 </div>
+            </div>
             </article>
             <hr class="division">
         </section>
-        <section class="skills-container">
+        <section id="skills" class="skills-container">
         <article>
             <h2>Habilidades y herramientas</h2>
             <h3>Habilidades principales</h3>
@@ -83,7 +91,7 @@
             <h2>Estoy encantada de responder a su próximo proyecto.</h2>
             <h3>yessica@gmail.com</h3>
         </section>
-        <footer class="contact-section">
+        <footer id ="contact" class="contact-section">
             <h2>Yessica</h2>
             <nav class="contact-nav">
                 <ul>
