--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- == ICONS == -->
+    <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <title>Portafolio</title>
 </head>
 <body>
@@ -32,9 +35,10 @@
                 <a href="#">Descargar currículum</a>
             </div>
             </article>
+            <div class="ellipse2"></div>
+            
         </section>
         <section class="proyect-container">
-            <div class="ellipse2"></div>
             <div id="projects" class="projects-title">
                 <h2>Proyectos</h2>
             </div>
@@ -58,7 +62,7 @@
                 <h3>Cards de precios</h3>
                 <p>Una sección de precios es importante en todo tipo de plataforma, en este ejercicio podrás practicar creando Cards de precios para Dektop y Mobile, dándoles un estilo visual simple y hermoso. </p>
                 <div class="project-pill">
-                    <a href="#">Ver en la web</a>
+                    <a href="https://rumazor.github.io/pricing-cards/">Ver en la web</a>
                     <h4>Ver prototipo</h4>
                 </div>
             </div>
@@ -95,9 +99,10 @@
             <h2>Yessica</h2>
             <nav class="contact-nav">
                 <ul>
-                    <li><a href="#">Linkedin</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#"><i class='bx bxl-linkedin-square' ></i>Linkedin</a></li>
+                    <li><a href="#"><i class='bx bxl-twitter'></i>Twitter</a></li>
+                    <li><a href="#"><i class='bx bxl-instagram' ></i>Instagram</a></li>
+                    
                 </ul>
             </nav>
         </footer>
