--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <footer id ="contact" class="contact-section">
             <h2>Yessica</h2>
             <nav class="contact-nav">
-                <ul>
+                <ul class="contact-nav_ul">
                     <li><a href="#"><i class='bx bxl-linkedin-square' ></i>Linkedin</a></li>
                     <li><a href="#"><i class='bx bxl-twitter'></i>Twitter</a></li>
                     <li><a href="#"><i class='bx bxl-instagram' ></i>Instagram</a></li>
